# stm32-nucleo-cmake-blinky

./: .gitignore  CMakeLists.txt  README.MD  arm-gcc.cmake  build_and_flash.sh  cortex-debug  format.sh  rebuild.sh
FreeRTOS/: FRC.h  FRCiso.h  FreeRTOSConfig.h  list.c  queue.c  tasks.c  timers.c
FreeRTOS/include/: FreeRTOSConfig.h  projdefs.h  timers.h
FreeRTOS/portable/GCC/ARM_CM3/: port.c  portmacro.h
cmsis/: startup_stm32f103xb.s  stm32f1xx.h
ld/: STM32F103RB_FLASH.ld
src/: main.c  memcpy.c
